# followers_

./: .gitignore  Cargo.toml  justfile  rust-toolchain.toml
.github/workflows/: github-pages.yml
src/: color.rs  hooks.rs  image.rs  lib.rs  main.rs  math.rs  renderer.rs  world.rs
web/: index.html  styles.css
