[workspace]
resolver = "2"
members = []

[package]
name = "followers"
version = "0.1.0"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.91"
nannou = "0.19.0"
nannou_egui = "0.19.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.214", features = ["derive"] }
